[workspace]
resolver = "2"

members = [
    "game1",
    "game5_liquiditypool",
    "game5_callback",
    "ex_liquidity_pool",
    "ex_token"
]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[workspace.dependencies.soroban-sdk]
version = "0.8.4"

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
